# MADIS

./: .dockerignore  .gitignore  Dockerfile  README.md  openenv.yaml  pyproject.toml
disaster_surveillance_env/: __init__.py  client.py  coordinator.py  hf_hub_auth.py  local_qwen_backend.py  models.py
disaster_surveillance_env/grpo/: __init__.py  dataset.py  eval.py  local_peft_backend.py  rewards.py  state.py
disaster_surveillance_env/server/: __init__.py  app.py  disaster_surveillance_environment.py  requirements.txt
disaster_surveillance_env/sft/: __init__.py  dataset.py  parsing.py  policies.py  prompting.py  training.py
openenv_disaster_surveillance_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
outputs/evals/qwen3_1_7b_level6_400/csv/: all_metrics.csv  coordinator_fallback.csv  events_detected_missed.csv  grid_coverage_percent.csv  high_priority_miss_rate.csv  on_time_detection_rate.csv  path_efficiency.csv  reward_breakdown.csv  total_reward.csv
outputs/qwen3_sft_warmup_v2/prompt_cache/: data-00000-of-00001.arrow  dataset_info.json  state.json
outputs/sft/qwen3-1.7b-coordinator-sft/metadata/: grpo_reuse.json  run_manifest.json  sft_results.json  trainer_state_summary.json
scripts/: __init__.py  analyze_baseline.py  compare_coordinator_variants.py  debug_qwen_coordinator.py  generate_grpo_prompts.py  generate_sft_dataset.py  run_random_episode.py  test_local_qwen.py  train_grpo_coordinator.py  train_sft_coordinator.py
server/: __init__.py  app.py
tests/: test_dynamic_disasters.py  test_grpo_state_and_rewards.py  test_level5_environment.py  test_sft_dataset_generation.py  test_sft_parsing.py  test_sft_prompting.py  test_sft_training.py
