[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-disaster-surveillance-env"
version = "0.1.0"
description = "Disaster surveillance grid environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.3",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "disaster_surveillance_env.server.app:main"
run-random-episode = "disaster_surveillance_env.server.disaster_surveillance_environment:main"

[tool.setuptools.packages.find]
include = ["disaster_surveillance_env*"]
