[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-disaster-surveillance-env"
version = "0.1.0"
description = "Disaster surveillance grid environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.3",
    "numpy>=2.0",
    "openai>=1.76.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
llm = [
    "transformers>=4.45.0",
    "torch>=2.2.0",
]
sft = [
    "transformers>=4.45.0",
    "torch>=2.2.0",
    "peft>=0.12.0",
    "datasets>=2.20.0",
    "accelerate>=0.34.0",
]
grpo = [
    "transformers>=4.45.0",
    "torch>=2.2.0",
    "peft>=0.12.0",
    "datasets>=2.20.0",
    "accelerate>=0.34.0",
    "trl>=0.20.0",
]

[project.scripts]
server = "disaster_surveillance_env.server.app:main"
run-random-episode = "disaster_surveillance_env.server.disaster_surveillance_environment:main"

[tool.setuptools.packages.find]
include = ["disaster_surveillance_env*"]
